title -> thinking in vue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-button",
+  "name": "thinking-in-vue",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "initial-wu <initial-wu@outlook.com>",
